# scbookcode

./: README.md
Ch 1 Beginners Tutorial/: Chapter 1 code figures.scd
Ch 12 The SuperCollider GUI Library/: Ch12_fig_001.scd  Ch12_fig_002.scd  Ch12_fig_003.scd  Ch12_fig_004.scd  Ch12_fig_005.scd  Ch12_fig_006.scd  Ch12_fig_007.scd  Ch12_fig_008.scd  Ch12_fig_009.scd  Ch12_fig_010.scd  Ch12_fig_011.scd  Ch12_fig_012.scd  Ch12_fig_013.scd  Ch12_fig_014.scd  Ch12_fig_015.scd  Ch12_fig_016.scd  Ch12_fig_017.scd  Ch12_fig_018.scd  Ch12_fig_019.scd  Ch12_fig_020.scd
Ch 15 Machine Listening in SuperCollider/: Ch15code.scd  OnlineMIDI.sc  melodytranscription.scd
Ch 16 Microsound/: CloudGenMini.scd  c16_micro_figures1_perception.scd  c16_micro_figures2_anatomy.scd  c16_micro_figures3_grainugens.scd  c16_micro_figures4_synthesis.scd  c16_micro_figures5_pulsar.scd  c16_micro_figures5b_pulsar_sieves.scd  c16_micro_figures6_time_constQ.scd  c16_micro_figures7_waveset_work.scd
Ch 17 Alternative Tunings with SuperCollider/: Chapter 17 code figures.scd
Ch 19 Stochastic and Deterministic Algorithms/: 19-Luque-Mayer-Figures.scd
Ch 20 Implementing New Language Syntax/F-String-parsing-classes/: f-string-object-testing.scd  f-string-objects.sc
Ch 20 Implementing New Language Syntax/Pattern-Dialect-parsing-classes/: BookParseNodes.sc
Ch 20 Implementing New Language Syntax/examples/: figure-20.1.scd  figure-20.10.scd  figure-20.12.scd  figure-20.13.scd  figure-20.2.scd  figure-20.3.scd  figure-20.4.scd  figure-20.5.scd  figure-20.6.scd  figure-20.8.scd  figure-20.9.scd
Ch 21 Interface Investigations/: ch21fig12.rtf  ch21fig2.rtf  ch21fig3.rtf  ch21fig5.rtf  ch21fig7.rtf
Ch 22 SuperCollider in Japan/Akihiro_kubota/: 11.chord_synthDef.scd
Ch 22 SuperCollider in Japan/Takuro_Hishikawa/: rainyroute79.scd  uppiano11-2.scd
Ch 22 SuperCollider in Japan/Yamato_yoshioka/: otophilia_FireworksGUI.scd  otophilia_GoodNoseGUI.scd  otophilia_InfiniteMelody.scd
Ch 22 SuperCollider in Japan/takeko_akamatsu/: dentake.scd
Ch 23 Dialects, Constraints and Systems within Systems/: README.txt  c23code_examples_dialects.scd
Ch 25 Machine Learning in SuperCollider/: Classifier.scd  PMOscMapping.scd  SC VAE Example.ipynb  VAE_synth.scd  girls_melody.sc  girls_rhythm.sc  markov.scd  sardnet_example.scd  vae.py
Ch 25 Machine Learning in SuperCollider/musicbox.vae.decoder.model/: saved_model.pb
Ch 26 Notations and Score-making/: 26-Notations-chapter-code-listing.scd
Ch 26 Notations and Score-making/classes/: 26_2-Github-URL.txt  26_3-Github-URL.txt
Ch 27 SCTweets/: fig-27_1-syntax-techniques.scd  fig-27_2-virgo-scottish-raga.scd  fig-27_3-olofsson-recursive-tweet0011.scd  fig-27_4-detailed-recursion.scd  fig-27_5-nathan-quine.scd
Ch 29 Writing Unit Generator Plug-ins/: CMakeLists.txt  Figure_29-10_Flanger_2.cpp  Figure_29-10b_Flanger_2 C++ interface.cpp  Figure_29-8_Flanger_1.cpp  Figure_29_16_Optimization.cpp  Flanger.sc  Flanger.schelp  README.md  Reverb1.sc  Reverb1.schelp  c29sec4-1_LPFrates.scd
Ch 5 Programming in SuperCollider/: Chapter 5 code figures.scd
Ch 6 Events and Patterns/: Chapter 6 code figures.scd
Ch 7 Just in Time Programming/: Ch7code_NEW.scd  eternal_return_elementary_NEW.scd
Ch 8 Object Modeling/: Ch8_ex1_puppet_shout.scd  Ch8_ex2_ShoutClass.scd  Ch8_ex2a_Shout_load.scd  Ch8_ex2b_ShoutClass.scd  Ch8_ex3_QCD.scd  Ch8_ex4_CloudGenMini.scd  Ch8codefigures1.scd  Ch8codefigures2.scd  ObjMod1_shout_qcd.scd
(+36 files in other folders)
